--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -14,81 +14,10 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
 <BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="850.0" prefWidth="1300.0" style="-fx-background-color: ALICEBLUE;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.Controller">
-    <bottom>
-        <GridPane prefHeight="48.0" prefWidth="1283.0" BorderPane.alignment="CENTER">
-            <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints />
-                <RowConstraints />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="26.0" minHeight="10.0" prefHeight="15.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="45.0" minHeight="10.0" prefHeight="45.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-            <children>
-                <HBox prefHeight="33.0" prefWidth="615.0" GridPane.rowIndex="2">
-                    <children>
-                        <Button fx:id="startButton" mnemonicParsing="false" onAction="#clickedStartButton" prefHeight="25.0" prefWidth="85.0" text="START">
-                            <HBox.margin>
-                                <Insets left="5.0" right="5.0" top="5.0" />
-                            </HBox.margin>
-                            <font>
-                                <Font name="System Bold" size="12.0" />
-                            </font>
-                        </Button>
-                        <Button fx:id="stopButton" mnemonicParsing="false" onAction="#clickedStopButton" prefHeight="25.0" prefWidth="85.0" text="STOP">
-                            <font>
-                                <Font name="System Bold" size="12.0" />
-                            </font>
-                            <HBox.margin>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                            </HBox.margin>
-                        </Button>
-                        <Button fx:id="clearButton" mnemonicParsing="false" onAction="#clickedClearButton" prefHeight="25.0" prefWidth="85.0" text="CLEAR">
-                            <font>
-                                <Font name="System Bold" size="12.0" />
-                            </font>
-                            <HBox.margin>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                            </HBox.margin>
-                        </Button>
-                        <Button fx:id="randomButton" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="29.0" prefWidth="86.0" text="RANDOM">
-                            <font>
-                                <Font name="System Bold" size="12.0" />
-                            </font>
-                            <HBox.margin>
-                                <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-                            </HBox.margin>
-                        </Button>
-                    </children>
-                    <padding>
-                        <Insets bottom="10.0" left="10.0" />
-                    </padding></HBox>
-            <Slider fx:id="cellSlider" majorTickUnit="50.0" max="40.0" min="2.0" minorTickCount="5" onMouseClicked="#sliderClicked" onMouseDragged="#sliderDragged" onScroll="#sliderDragged" showTickLabels="true" showTickMarks="true" value="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <GridPane.margin>
-                  <Insets left="450.0" right="50.0" />
-               </GridPane.margin>
-            </Slider>
-            <ColorPicker onAction="#colorPicker" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            </children>
-            <padding>
-                <Insets left="20.0" top="10.0" />
-            </padding>
-        </GridPane>
-    </bottom>
-    <center>
-        <Canvas fx:id="CanvasId" focusTraversable="true" height="717.0" onScroll="#sliderDragged" width="1260.0" BorderPane.alignment="CENTER" />
-    </center>
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <menus>
@@ -108,4 +37,83 @@
             </menus>
         </MenuBar>
     </top>
+   <bottom>
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <VBox prefHeight="100.0" prefWidth="114.0">
+               <children>
+                        <Button fx:id="startButton" mnemonicParsing="false" onAction="#clickedStartButton" prefHeight="25.0" prefWidth="85.0" text="START">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                        </Button>
+                        <Button fx:id="stopButton" mnemonicParsing="false" onAction="#clickedStopButton" prefHeight="25.0" prefWidth="85.0" text="STOP">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                        </Button>
+               </children>
+            </VBox>
+            <VBox prefHeight="100.0" prefWidth="122.0">
+               <HBox.margin>
+                  <Insets />
+               </HBox.margin>
+               <children>
+                        <Button fx:id="clearButton" mnemonicParsing="false" onAction="#clickedClearButton" prefHeight="25.0" prefWidth="85.0" text="CLEAR">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                        </Button>
+                        <Button fx:id="randomButton" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="25.0" prefWidth="85.0" text="RANDOM">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                     <VBox.margin>
+                        <Insets top="10.0" />
+                     </VBox.margin>
+                        </Button>
+               </children>
+            </VBox>
+            <GridPane prefHeight="80.0" prefWidth="989.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Slider fx:id="cellSlider" majorTickUnit="50.0" max="40.0" min="2.0" minorTickCount="5" onMouseClicked="#CellSizeClicked" onMouseDragged="#CellSizeClicked" showTickLabels="true" showTickMarks="true" value="10.0" GridPane.columnIndex="1">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </Slider>
+                  <Slider fx:id="sliderFPS" blockIncrement="30.0" majorTickUnit="30.0" max="120.0" min="2.0" minorTickCount="5" onMouseClicked="#FPSClicked" onMouseDragged="#FPSClicked" value="30.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                     <opaqueInsets>
+                        <Insets />
+                     </opaqueInsets>
+                  </Slider>
+                  <ColorPicker fx:id="colorPicker" onAction="#colorPickerClicked" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+               </children>
+            </GridPane>
+         </children>
+         <padding>
+            <Insets bottom="20.0" left="20.0" right="20.0" />
+         </padding>
+      </HBox>
+   </bottom>
+   <center>
+        <Canvas fx:id="CanvasId" focusTraversable="true" height="675.0" width="1224.0" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
