--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -16,8 +16,9 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="850.0" prefWidth="1300.0" style="-fx-background-color: ALICEBLUE;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.Controller">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="1280.0" style="-fx-background-color: ALICEBLUE;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.Controller">
     <top>
         <MenuBar BorderPane.alignment="CENTER">
             <menus>
@@ -83,28 +84,31 @@
                         </Button>
                     </children>
                 </VBox>
-                <GridPane prefHeight="80.0" prefWidth="989.0">
+                <GridPane alignment="TOP_RIGHT" prefHeight="80.0" prefWidth="989.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
+                        <RowConstraints />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <Slider fx:id="cellSlider" cacheShape="false" centerShape="false" focusTraversable="false" majorTickUnit="50.0" max="40.0" min="1" minorTickCount="5" onMouseClicked="#CellSizeClicked" onMouseDragged="#CellSizeClicked" scaleShape="false" showTickLabels="true" showTickMarks="true" value="10.0" GridPane.columnIndex="1">
+                        <Slider fx:id="cellSlider" blockIncrement="1.0" cacheShape="false" centerShape="false" focusTraversable="false" majorTickUnit="2.0" max="40.0" min="1.0" minorTickCount="2" onMouseClicked="#CellSizeClicked" onMouseDragged="#CellSizeClicked" prefHeight="14.0" prefWidth="443.0" scaleShape="false" value="10.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                             <opaqueInsets>
                                 <Insets />
                             </opaqueInsets>
                         </Slider>
-                        <Slider fx:id="sliderFPS" blockIncrement="30.0" cacheShape="false" centerShape="false" focusTraversable="false" majorTickUnit="30.0" max="60.0" min="1.0" minorTickCount="5" onMouseClicked="#FPSClicked" onMouseDragged="#FPSClicked" scaleShape="false" value="30.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                        <Slider fx:id="sliderFPS" blockIncrement="30.0" cacheShape="false" centerShape="false" focusTraversable="false" majorTickUnit="30.0" max="60.0" min="1.0" minorTickCount="5" onMouseClicked="#FPSClicked" onMouseDragged="#FPSClicked" scaleShape="false" value="30.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                             <opaqueInsets>
                                 <Insets />
                             </opaqueInsets>
                         </Slider>
-                        <ColorPicker fx:id="colorPicker" cacheShape="false" centerShape="false" focusTraversable="false" onAction="#colorPickerClicked" scaleShape="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                        <ColorPicker fx:id="colorPicker" cacheShape="false" centerShape="false" focusTraversable="false" onAction="#colorPickerClicked" scaleShape="false" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                  <Text strokeLineCap="BUTT" strokeType="OUTSIDE" strokeWidth="0.0" text="CellSize" textAlignment="RIGHT" wrappingWidth="491.955078125" GridPane.rowIndex="1" />
+                  <Text strokeType="OUTSIDE" strokeWidth="0.0" text="FPS" textAlignment="RIGHT" wrappingWidth="491.955078125" GridPane.rowIndex="2" />
                     </children>
                 </GridPane>
             </children>
@@ -113,7 +117,7 @@
             </padding>
         </HBox>
     </bottom>
-    <center>
-        <Canvas fx:id="CanvasId" focusTraversable="true" height="675.0" onMouseDragged="#CanvasPressed" onMousePressed="#CanvasPressed" onMouseReleased="#CanvasReleased" pickOnBounds="true" width="1224.0" BorderPane.alignment="CENTER" />
-    </center>
+   <center>
+        <Canvas fx:id="CanvasId" focusTraversable="true" height="750.0" onMouseDragged="#CanvasPressed" onMousePressed="#CanvasPressed" onMouseReleased="#CanvasReleased" pickOnBounds="true" width="1248.0" BorderPane.alignment="CENTER" />
+   </center>
 </BorderPane>
