--- a/src/_Game/SaveBoard.fxml
+++ b/src/_Game/SaveBoard.fxml
@@ -3,11 +3,12 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DialogPane?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.SaveGame">
+<DialogPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.SaveGame">
     <header>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0">
             <children>
@@ -16,17 +17,19 @@
                 <TextField fx:id="author" layoutX="30.0" layoutY="94.0" prefHeight="25.0" prefWidth="123.0" promptText="Author" />
                 <TextField fx:id="description" layoutX="29.0" layoutY="138.0" prefHeight="25.0" prefWidth="123.0" promptText="Description" />
                 <TextField fx:id="rules" layoutX="30.0" layoutY="187.0" prefHeight="25.0" prefWidth="123.0" promptText="Rules" />
-                <Canvas fx:id="saveCanvas" height="200.0" layoutX="240.0" layoutY="38.0" width="200.0" />
+                <Canvas fx:id="saveCanvas" height="200.0" layoutX="387.0" layoutY="55.0" width="200.0" />
             </children></AnchorPane>
     </header>
     <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0">
             <children>
-                <Button fx:id="saveBtn" layoutX="38.0" layoutY="32.0" mnemonicParsing="false" onAction="#saveBtn" text="Lagre mønster" />
-                <Button fx:id="closeBtn" layoutX="38.0" layoutY="74.0" mnemonicParsing="false" text="Lukk" />
+                <Button fx:id="saveBtn" layoutX="38.0" layoutY="32.0" mnemonicParsing="false" onAction="#saveBtn" text="Save pattern" />
+                <Button fx:id="closeBtn" layoutX="38.0" layoutY="74.0" mnemonicParsing="false" onAction="#closeBtn" text="Close" />
+                <ScrollPane fx:id="scroll" layoutX="8.0" layoutY="139.0" prefHeight="150.0" prefWidth="787.0">
+               <content>
+                  <Canvas fx:id="canvasScroll" height="140.0" width="700.0" />
+               </content>
+                </ScrollPane>
             </children></AnchorPane>
     </content>
-    <expandableContent>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="200.0" prefWidth="320.0" />
-    </expandableContent>
 </DialogPane>
