--- a/src/_Game/Frame.fxml
+++ b/src/_Game/Frame.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -10,50 +11,53 @@
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.ToolBar?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.Controller">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1280.0" style="-fx-background-color: orange; -fx-border-color: BLACK;" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="_Game.Controller">
    <children>
-      <Button fx:id="startButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="19.0" layoutY="677.0" mnemonicParsing="false" onAction="#clickedStartButton" pickOnBounds="false" prefHeight="67.0" prefWidth="140.0" scaleShape="false" text="START">
+      <Button fx:id="startButton" alignment="CENTER" cacheShape="false" centerShape="false" focusTraversable="false" graphicTextGap="1.0" layoutX="12.0" layoutY="690.0" mnemonicParsing="false" onAction="#clickedStartButton" pickOnBounds="false" prefHeight="70.0" prefWidth="144.0" scaleShape="false" style="-fx-border-color: BLACK; -fx-border-radius: 3;" text="START" textAlignment="CENTER" textOverrun="CLIP">
+         <font>
+            <Font name="Arial Bold" size="12.0" />
+         </font>
+      </Button>
+      <Canvas fx:id="CanvasId" focusTraversable="true" height="566.0" layoutX="14.0" layoutY="94.0" onMouseDragged="#CanvasPressed" onMousePressed="#CanvasPressed" onMouseReleased="#CanvasReleased" pickOnBounds="true" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" width="1250.0" />
+      <Button fx:id="stopButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="163.0" layoutY="726.0" mnemonicParsing="false" onAction="#clickedStopButton" prefHeight="33.0" prefWidth="109.0" scaleShape="false" style="-fx-border-color: BLACK; -fx-border-radius: 3;" text="STOP">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Canvas fx:id="CanvasId" focusTraversable="true" height="602.0" layoutX="14.0" layoutY="43.0" onMouseDragged="#CanvasPressed" onMousePressed="#CanvasPressed" onMouseReleased="#CanvasReleased" pickOnBounds="true" width="1250.0" />
-      <Button fx:id="stopButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="163.0" layoutY="711.0" mnemonicParsing="false" onAction="#clickedStopButton" prefHeight="33.0" prefWidth="109.0" scaleShape="false" text="STOP">
+      <Button fx:id="clearButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="163.0" layoutY="690.0" mnemonicParsing="false" onAction="#clickedClearButton" prefHeight="33.0" prefWidth="109.0" scaleShape="false" style="-fx-border-color: BLACK; -fx-border-radius: 3;" text="CLEAR">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Button>
-      <Button fx:id="clearButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="163.0" layoutY="677.0" mnemonicParsing="false" onAction="#clickedClearButton" prefHeight="33.0" prefWidth="109.0" scaleShape="false" text="CLEAR">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Button>
-      <Button fx:id="randomButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="903.0" layoutY="680.0" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="25.0" prefWidth="91.0" scaleShape="false" text="RANDOM">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Button>
-      <Slider fx:id="cellSlider" blockIncrement="1.0" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1128.0" layoutY="687.0" majorTickUnit="2.0" max="40.0" min="1.0" minorTickCount="2" onMouseClicked="#CellSizeClicked" onMouseDragged="#CellSizeClicked" prefHeight="14.0" prefWidth="98.0" scaleShape="false" value="10.0">
+      <Slider fx:id="cellSlider" blockIncrement="1.0" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1128.0" layoutY="679.0" majorTickUnit="2.0" max="40.0" min="1.0" minorTickCount="2" onMouseClicked="#CellSizeClicked" onMouseDragged="#CellSizeClicked" prefHeight="14.0" prefWidth="98.0" scaleShape="false" value="10.0">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </Slider>
-      <Slider fx:id="sliderFPS" blockIncrement="30.0" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1006.0" layoutY="687.0" majorTickUnit="30.0" max="60.0" min="1.0" minorTickCount="5" onMouseClicked="#FPSClicked" onMouseDragged="#FPSClicked" prefHeight="14.0" prefWidth="98.0" scaleShape="false" value="30.0">
+      <Slider fx:id="sliderFPS" blockIncrement="30.0" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1128.0" layoutY="699.0" majorTickUnit="30.0" max="60.0" min="1.0" minorTickCount="5" onMouseClicked="#FPSClicked" onMouseDragged="#FPSClicked" prefHeight="14.0" prefWidth="98.0" scaleShape="false" style="-fx-major-tick-unit: 10;" value="30.0">
          <opaqueInsets>
             <Insets />
          </opaqueInsets>
       </Slider>
-      <Text layoutX="1147.0" layoutY="673.0" strokeLineCap="BUTT" strokeType="OUTSIDE" strokeWidth="0.0" text="CellSize" textAlignment="RIGHT" wrappingWidth="44.955078125" />
-      <Text layoutX="1043.0" layoutY="673.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FPS" textAlignment="RIGHT" wrappingWidth="23.955081045627594" />
-      <ColorPicker fx:id="colorPicker" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1115.0" layoutY="715.0" onAction="#colorPickerClicked" scaleShape="false" />
-      <ToolBar layoutX="-1.0" layoutY="-6.0" prefHeight="40.0" prefWidth="1280.0">
+      <Text fontSmoothingType="LCD" layoutX="1073.0" layoutY="690.0" strokeLineCap="BUTT" strokeType="OUTSIDE" strokeWidth="0.0" text="CellSize" textAlignment="RIGHT" wrappingWidth="44.955078125">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Text>
+      <Text fontSmoothingType="LCD" layoutX="1095.0" layoutY="710.0" strokeType="OUTSIDE" strokeWidth="0.0" text="FPS" textAlignment="RIGHT" wrappingWidth="23.955081045627594">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Text>
+      <ColorPicker fx:id="colorPicker" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="1128.0" layoutY="722.0" onAction="#colorPickerClicked" scaleShape="false" style="-fx-border-color: black; -fx-border-radius: 3;" />
+      <ToolBar accessibleRole="BUTTON" layoutX="-1.0" layoutY="-6.0" prefHeight="40.0" prefWidth="1280.0" style="-fx-border-color: BLACK;">
          <items>
-            <MenuBar prefHeight="25.0" prefWidth="109.0">
+            <MenuBar minHeight="-Infinity" minWidth="-Infinity" prefHeight="27.0" prefWidth="101.0">
                <menus>
                   <Menu text="File">
                      <items>
@@ -80,12 +84,32 @@
                      </items>
                   </Menu>
                </menus>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
             </MenuBar>
             <Text fx:id="tekst" strokeType="OUTSIDE" strokeWidth="0.0" text="Text" wrappingWidth="183.98577880859375" />
          </items>
       </ToolBar>
-      <Text layoutX="777.0" layoutY="732.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pattern Link" />
-      <Button layoutX="1013.0" layoutY="715.0" mnemonicParsing="false" text="Load Pattern" />
-      <TextField layoutX="856.0" layoutY="715.0" />
+      <Text fontSmoothingType="LCD" layoutX="766.0" layoutY="740.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pattern Link">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font></Text>
+      <Button layoutX="1030.0" layoutY="722.0" mnemonicParsing="false" style="-fx-border-color: black; -fx-border-radius: 3;" text="Load Pattern" />
+      <TextField layoutX="856.0" layoutY="722.0" style="-fx-border-color: black; -fx-border-radius: 3;" />
+      <Button fx:id="randomButton" cacheShape="false" centerShape="false" focusTraversable="false" layoutX="755.0" layoutY="681.0" mnemonicParsing="false" onAction="#clickedRandomButton" prefHeight="25.0" prefWidth="91.0" scaleShape="false" text="RANDOM">
+         <font>
+            <Font name="System Bold" size="12.0" />
+         </font>
+      </Button>
+      <ImageView fitHeight="53.0" fitWidth="425.0" layoutX="439.0" layoutY="34.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@Game-of-Life.png" />
+         </image>
+      </ImageView>
+      <ChoiceBox layoutX="856.0" layoutY="685.0" prefWidth="150.0" style="-fx-border-radius: 3; -fx-border-color: Black;" />
    </children>
+   <opaqueInsets>
+      <Insets />
+   </opaqueInsets>
 </Pane>
